--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -396,9 +396,12 @@
 			> ul {
 				width: 100%;
 				> .buttonSquare {
-					height: 26.4vw;
+					height: 7.77778vw;
 					border-top-width: 0;
-					@include mediaQuery {
+					@include mediaQuery(mobile) {
+						height: 26.4vw;
+					}
+					@include mediaQuery(mediumDesktop) {
 						height: 12.10811vw;
 					}
 					@include mediaQuery(wideDesktop) {
@@ -918,9 +921,16 @@
 			}
 			@include mediaQuery(mediumDesktop) {
 				width: 100%;
+				top: 0;
 			}
 			@include mediaQuery(wideDesktop) {
 				top: 43.33333px;
+			}
+
+			&:hover {
+				.buttonSquare.mod-animeH:before, .buttonSquare.mod-animeH:after {
+					transform: scaleX(1);
+				}
 			}
 			
 			&:before {
@@ -942,17 +952,48 @@
 			}
 
 			.buttonSquare {
-				width: 6.10811vw;
-				height: 6.10811vw;
-				bottom: .64865vw;
-				right: .64865vw;
+				display: block;
 				position: absolute;
-
-				img {
-					display: block;
-					width: 2.64865vw;
-					height: 2.75676vw;
+				right: .41667vw;
+				bottom: .41667vw;
+				width: 3.92361vw;
+				height: 3.92361vw;
+				@include mediaQuery(mobile) {
+					display: none;
 				}
+				@include mediaQuery(mediumDesktop) {
+					width: 6.10811vw;
+					height: 6.10811vw;
+				}
+				@include mediaQuery(wideDesktop) {
+					right: 6.66667px;
+					bottom: 6.66667px;
+					width: 62.77778px;
+					height: 62.77778px;
+				}
+				
+				img {
+					width: 1.70139vw;
+					height: 1.77083vw;
+					@include mediaQuery(mobile) {
+						display: none;
+					}
+					@include mediaQuery(mediumDesktop) {
+						display: block;
+						width: 2.64865vw;
+						height: 2.75676vw;
+					}
+					@include mediaQuery(wideDesktop) {
+						width: 27.22222px;
+						height: 28.33333px;
+					}
+				}
+			}
+		}
+
+		&_relationInner {
+			@include mediaQuery {
+				cursor: pointer;
 			}
 		}
 	}
@@ -1725,13 +1766,13 @@
 .lp-modal {
 	position: fixed;
 	width: 100%;
-	z-index: 51;
+	opacity: 0;
+	z-index: -1;
 	left: 0;
 	bottom: 0;
 	top: 0;
 	right: 0;
 	margin: auto;
-	display: none;
 
 	.buttonSquare {
 		position: fixed;
@@ -1743,6 +1784,43 @@
     top: 0;
 		border: none;
 		background-color: #deff00!important;
+		@include mediaQuery(wideDesktop) {
+			width: 107.77778px;
+			height: 107.77778px;
+		}
+		&:hover {
+			.modalCloseIcon {
+				&:before, &:after {
+					background-color: #e50013;
+				}
+			}
+		}
+
+		.modalCloseIcon {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 4;
+			&:before, &:after {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				content: "";
+				width: 5.12821%;
+				height: 35.89744%;
+				min-height: 1px;
+				background-color: #000;
+				transition: transform .4s cubic-bezier(.19,1,.22,1),background-color .4s cubic-bezier(.19,1,.22,1);
+			}
+			&:before {
+				transform: translate(-50%,-50%) skewX(30deg);
+			}
+			&:after {
+				transform: translate(-50%,-50%) skewX(-30deg);
+			}
+		}
 	}
 
 	.lp-modalContents {
@@ -1755,7 +1833,24 @@
     z-index: 1;
 		background-color: #fff;
 		width: 761px;
-    height: 454px;
+		height: 454px;
+		opacity: 0;
+		transform: translateY(5%);
+		transition: opacity 0.4s cubic-bezier(.19,1,.22,1), 
+								transform 0.4s cubic-bezier(.19,1,.22,1),
+								z-index 0s cubic-bezier(.19,1,.22,1);
+		@include mediaQuery {
+			width: 761px;
+			height: 454px;
+		}
+		@media screen and (min-width: 1100px){
+			width: 1026px;
+			height: 611px;
+		}
+		@include mediaQuery(wideDesktop) {
+			width: 1200px;
+			height: 715px;
+		}
 		&:after {
 			position: absolute;
 			left: 0;
@@ -1775,6 +1870,11 @@
 			background-color: #deff00;
 			color: #000;
 			z-index: 5;
+			@include mediaQuery(wideDesktop) {
+				padding: 20px 16.66667px;
+				top: -20px;
+				left: 22.22222px;
+			}
 		}
 
 		&_titleInner {
@@ -1783,6 +1883,9 @@
 
 			img {
 				width: 1.77083vw;
+				@include mediaQuery(wideDesktop) {
+					width: 28.33333px;
+				}
 			}
 		}
 
@@ -1805,17 +1908,30 @@
 		}
 	}
 }
-// .lp-modalBg {
-// 	position: fixed;
-// 	left: 0;
-// 	top: 0;
-// 	width: 100%;
-// 	height: 100%;
-// 	mix-blend-mode: multiply;
-// 	background-color: #e50013;
-// 	opacity: 0;
-// 	z-index: 50;
-// 	transition: visibility .4s cubic-bezier(.19,1,.22,1),
-// 							opacity .4s cubic-bezier(.19,1,.22,1),
-// 							z-index 0s cubic-bezier(.19,1,.22,1) .4s;
-// }
+.lp-modalBg {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	mix-blend-mode: multiply;
+	background-color: #e50013;
+	opacity: 0;
+	z-index: -1;
+	transition: visibility .4s cubic-bezier(.19,1,.22,1),
+							opacity .4s cubic-bezier(.19,1,.22,1),
+							z-index 0s cubic-bezier(.19,1,.22,1);
+}
+.lp-modal.is-opened {
+	opacity: 1;
+	z-index: 51;
+	.lp-modalContents {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+.lp-modalBg.is-opened {
+	visibility: visible;
+	opacity: 1;
+	z-index: 50;
+}
