--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -1264,8 +1264,9 @@
 		}
 
 		&_pages.mod-main:after {
-			content: '※本作品は、2019年10月20日(日）に朝日新聞 全国朝刊にて掲載されたものになります。';
+			content: '※本作品は、2019年10月20日(日）に\A 朝日新聞 全国朝刊にて掲載されたものになります。';
 			@include mediaQuery {
+				content: '※本作品は、2019年10月20日(日）に朝日新聞 全国朝刊にて掲載されたものになります。';
 				font-size: 1.62162vw;
 			}
 		}
