--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -13,11 +13,10 @@
 		background-color: #000;
 	}
 
-
 /* ------------------
-		lp-loading 
+		p-loading 
 --------------------- */
-	.lp-loading {
+	.p-loading {
 		position: fixed;
 		top: 0;
 		right: 0;
@@ -71,7 +70,7 @@
 		}
 	}
 
-	.lp-loadingInner {
+	.p-loadingInner {
 		position: absolute;
 		left: 0;
 		top: 0;
@@ -172,9 +171,9 @@
 	}
 
 /* ------------------
-		lp-header 
+		p-header 
 --------------------- */
-	.lp-header {
+	.p-header {
 		width: 100%;
 		background-color: #fff;
 		position: fixed;
@@ -195,7 +194,7 @@
 		}
 	}
 	
-	.lp-headerTicker {
+	.p-headerTicker {
 		background-image: url('../../../data/hidari-kikino-eren/images/header_ticker.png');
 		background-repeat: repeat-x;
 		background-size: 49.64103vw 12vw;
@@ -243,9 +242,9 @@
 	}
 
 /* ------------------
-		lp-menuBtn
+		p-menuBtn
 --------------------- */
-	.lp-menuBtn {
+	.p-menuBtn {
 		position: fixed;
 		right: 0;
 		top: 0;
@@ -324,9 +323,9 @@
 	}
 
 /* ------------------
-		lp-menu
+		p-menu
 --------------------- */
-	.lp-menu {
+	.p-menu {
 		position: fixed;
 		top: 0;
 		right: 0;
@@ -486,7 +485,7 @@
 	}
 
 /* ------------------
-		lp-main
+		main
 --------------------- */
 	main {
 		position: relative;
@@ -501,9 +500,9 @@
 	}
 
 /* ------------------
-		lp-kv
+		p-kv
 --------------------- */
-	.lp-kv { //動きを見てプロパティ追加
+	.p-kv { //動きを見てプロパティ追加
 		position: relative;
 		width: 100%;
 		max-width: 1600px;
@@ -542,7 +541,7 @@
 			}
 		}
 
-		.lp-character {
+		.p-character {
 			position: relative;
 			height: 100%;
 			width: 67.86667vw;
@@ -578,12 +577,12 @@
 
 		.mod-item1 {
 			background-color: #0e6cb2;
-			.lp-character_inner {
+			.p-character_inner {
 				background-image: url('../../../data/hidari-kikino-eren/images/kv_img1.jpg');
 				transform: translateY(-20%);
 				transition-delay: 0s!important;
 			}
-			.lp-character_inner:after {
+			.p-character_inner:after {
 				background-color: #0e6cb2;
 				transform-origin: bottom center;
 				transition-delay: 0s!important;
@@ -591,12 +590,12 @@
 		}
 		.mod-item2 {
 			background-color: #fe3c00;
-			.lp-character_inner {
+			.p-character_inner {
 				background-image: url('../../../data/hidari-kikino-eren/images/kv_img2.jpg');
 				transform: translateY(20%);
 				transition-delay: 0.1s!important;
 			}
-			.lp-character_inner:after {
+			.p-character_inner:after {
 				background-color: #fe3c00;
 				transform-origin: top center;
 				transition-delay: 0.1s!important;
@@ -604,12 +603,12 @@
 		}
 		.mod-item3 {
 			background-color: #deff00;
-			.lp-character_inner {
+			.p-character_inner {
 				background-image: url('../../../data/hidari-kikino-eren/images/kv_img3.jpg');
 				transform: translateY(-20%);
 				transition-delay: 0.2s!important;
 			}
-			.lp-character_inner:after {
+			.p-character_inner:after {
 				background-color: #deff00;
 				transform-origin: bottom center;
 				transition-delay: 0.2s!important;
@@ -617,12 +616,12 @@
 		}
 		.mod-item4 {
 			background-color: #02d0d0;
-			.lp-character_inner {
+			.p-character_inner {
 				background-image: url('../../../data/hidari-kikino-eren/images/kv_img4.jpg');
 				transform: translateY(20%);
 				transition-delay: 0.3s!important;
 			}
-			.lp-character_inner:after {
+			.p-character_inner:after {
 				background-color: #02d0d0;
 				transform-origin: top center;
 				transition-delay: 0.3s!important;
@@ -729,9 +728,9 @@
 	}
 
 /* ------------------
-		lp-summery
+		p-summery
 --------------------- */
-	.lp-summery {
+	.p-summery {
 		position: relative;
 		width: 100%;
 		max-width: 1600px;
@@ -894,7 +893,7 @@
 		$delay: 0.3;
 		$delayAfter: 0.5;
 		@while $type <= 10 {
-			.lp-summery_descLine:nth-of-type(#{$type}) {
+			.p-summery_descLine:nth-of-type(#{$type}) {
 				transition-delay: #{$delay}s;
 				&:after {
 					transition-delay: #{$delayAfter}s;
@@ -905,7 +904,7 @@
 			$delayAfter: $delayAfter + 0.1;
 		}
 
-		.lp-summery_descLine:last-of-type {
+		.p-summery_descLine:last-of-type {
 			transition-delay: 1.1s;
 			&:after {
 				transition-delay: 1.3s;
@@ -1000,9 +999,9 @@
 
 
 /* ------------------
-		lp-story
+		p-story
 --------------------- */
-	.lp-story {
+	.p-story {
 		position: relative;
 		width: 100%;
 		margin-top: 13.33333vw;
@@ -1286,8 +1285,8 @@
 			}
 		}
 	}
-	.lp-story.is-prologue { //tab切り替えのstyle
-		.lp-story_tabs:before {
+	.p-story.is-prologue { //tab切り替えのstyle
+		.p-story_tabs:before {
 			width: 4.26667vw;
 			@include mediaQuery {
 				width: auto;
@@ -1298,7 +1297,7 @@
 				right: calc(50% + 727.77778px);
 			}
 		}
-		.lp-story_tabs:after { //tab切り替えのstyle
+		.p-story_tabs:after { //tab切り替えのstyle
 			width: 50.66667vw;
 			@include mediaQuery {
 				width: auto;
@@ -1311,8 +1310,8 @@
 		}
 	}
 
-	.lp-story.is-main { //tab切り替えのstyle
-		.lp-story_tabs:before {
+	.p-story.is-main { //tab切り替えのstyle
+		.p-story_tabs:before {
 			width: 50.66667vw;
 			@include mediaQuery {
 				width: auto;
@@ -1323,7 +1322,7 @@
 				right: calc(50% + -16.66667px);
 			}
 		}
-		.lp-story_tabs:after { //tab切り替えのstyle
+		.p-story_tabs:after { //tab切り替えのstyle
 			width: 4vw;
 			@include mediaQuery {
 				width: auto;
@@ -1337,9 +1336,9 @@
 	}
 
 /* ------------------
-		lp-result
+		p-result
 --------------------- */
-	.lp-result {
+	.p-result {
 		position: relative;
 		width: 100%;
 		max-width: 1455.55556px;
@@ -1483,7 +1482,7 @@
 			}
 		}
 
-		.lp-resultTitle {
+		.p-resultTitle {
 			display: flex;
 			z-index: 2;
 			margin-bottom: 4vw;
@@ -1549,7 +1548,7 @@
 			}
 		}
 
-		.lp-resultDesc {
+		.p-resultDesc {
 			position: relative;
 			display: flex;
 			flex-direction: column;
@@ -1600,7 +1599,7 @@
 		$delay: 0.7;
 		$delayAfter: 0.9;
 		@while $type <= 5 {
-			.lp-resultDesc_line:nth-of-type(#{$type}) {
+			.p-resultDesc_line:nth-of-type(#{$type}) {
 				transition-delay: #{$delay}s;
 				&:after {
 					transition-delay: #{$delayAfter}s;
@@ -1615,7 +1614,7 @@
 		$delay: 0.5;
 		$delayAfter: 0.7;
 		@while $type <= 8 {
-			.lp-resultDesc_line:nth-of-type(#{$type}) {
+			.p-resultDesc_line:nth-of-type(#{$type}) {
 				transition-delay: #{$delay}s;
 				&:after {
 					transition-delay: #{$delayAfter}s;
@@ -1626,7 +1625,7 @@
 			$delayAfter: $delayAfter + 0.1;
 		}
 
-		.lp-resultLogo {
+		.p-resultLogo {
 			position: absolute;
 			width: 21.73333vw;
 			height: 24.66667vw;
@@ -1647,11 +1646,11 @@
 			}
 		}
 
-		.lp-resultImg1, .lp-resultImg2 {
+		.p-resultImg1, .p-resultImg2 {
 			position: absolute;
 		}
 
-		.lp-resultImg1 {
+		.p-resultImg1 {
 			width: 40.4vw;
 			height: 27.86667vw;
 			bottom: 34.66667vw;
@@ -1673,7 +1672,7 @@
 			}
 		}
 
-		.lp-resultImg2 {
+		.p-resultImg2 {
 			width: 42vw;
 			height: 29.6vw;
 			bottom: 6.93333vw;
@@ -1695,7 +1694,7 @@
 			}
 		}
 
-		.lp-resultDate {
+		.p-resultDate {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
@@ -1764,7 +1763,7 @@
 	}
 }
 
-.lp-modal {
+.p-modal {
 	position: fixed;
 	width: 100%;
 	opacity: 0;
@@ -1824,7 +1823,7 @@
 		}
 	}
 
-	.lp-modalContents {
+	.p-modalContents {
 		position: absolute;
     top: 0;
     bottom: 0;
@@ -1890,7 +1889,7 @@
 			}
 		}
 
-		.lp-modalContentsInner {
+		.p-modalContentsInner {
 			position: absolute;
 			left: 0;
 			top: 0;
@@ -1909,7 +1908,7 @@
 		}
 	}
 }
-.lp-modalBg {
+.p-modalBg {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -1923,15 +1922,15 @@
 							opacity .4s cubic-bezier(.19,1,.22,1),
 							z-index 0s cubic-bezier(.19,1,.22,1);
 }
-.lp-modal.is-opened {
+.p-modal.is-opened {
 	opacity: 1;
 	z-index: 51;
-	.lp-modalContents {
+	.p-modalContents {
 		opacity: 1;
 		transform: translateY(0);
 	}
 }
-.lp-modalBg.is-opened {
+.p-modalBg.is-opened {
 	visibility: visible;
 	opacity: 1;
 	z-index: 50;
