--- a/dev/web/src/sass/hidari-kikino-eren/index.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/index.scss
@@ -1,5 +1,23 @@
-@import "breakpoint";
-@import "reset";
-@import "button";
-@import "style";
-@import "animation";
+// ==========================================================================
+// Foundation
+// ==========================================================================
+@import "../foundation/base/reset";
+@import "../foundation/mixin/breakpoint";
+
+
+// ==========================================================================
+// Object
+// ==========================================================================
+
+
+/* Component 
+-----------------------------------------------------------------*/
+@import "../object/component/button";
+
+/* Project
+-----------------------------------------------------------------*/
+@import "../object/project/hidari-kikino-eren/style";
+
+/* Utility
+-----------------------------------------------------------------*/
+@import "../object/utility/_display";
