sass コメントアウト eren表記変更

--- a/dev/web/src/sass/foundation/mixin/_breakpoint.scss
+++ b/dev/web/src/sass/foundation/mixin/_breakpoint.scss
@@ -3,7 +3,7 @@
   接尾辞は各project名 (ex) kadel → -k
 */
 
-/* hidarikiki-no-eren */
+/* hidari-kikino-eren */
 $breakpointss: (
   's-h': 'screen and (max-width: 799px)',
   'm-h': 'screen and (min-width: 800px)',
