--- a/dev/web/src/sass/object/utility/_display.scss
+++ b/dev/web/src/sass/object/utility/_display.scss
@@ -3,9 +3,9 @@
 */
 
 
-/* ------------------
-  hidarikiki-no-eren
---------------------- */  
+/* -------------------
+  hidari-kikino-eren
+---------------------- */  
 
 /*  特定のサイズのみ表示
 -------------------------*/
