--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -87,7 +87,7 @@ input, select {
   breakpoint 5種類 (ss, s, m, l, xl) を各プロジェクト毎に割り当てる
   接尾辞は各project名 (ex) kadel → -k
 */
-/* hidarikiki-no-eren */
+/* hidari-kikino-eren */
 /* Component 
 -----------------------------------------------------------------*/
 /*
@@ -2670,9 +2670,9 @@ input, select {
 /*
   接尾辞は各project名 (ex) kadel → -k
 */
-/* ------------------
-  hidarikiki-no-eren
---------------------- */
+/* -------------------
+  hidari-kikino-eren
+---------------------- */
 /*  特定のサイズのみ表示
 -------------------------*/
 .u-blockS-h {
