--- a/dev/web/src/sass/foundation/mixin/_breakpoint.scss
+++ b/dev/web/src/sass/foundation/mixin/_breakpoint.scss
@@ -4,7 +4,7 @@
 */
 
 /* hidari-kikino-eren */
-$breakpointss: (
+$breakpoints: (
   's-h': 'screen and (max-width: 799px)',
   'm-h': 'screen and (min-width: 800px)',
   'l-h': 'screen and (min-width: 800px) and (max-width: 1100px)',
@@ -12,7 +12,7 @@ $breakpointss: (
 ) !default; //後から上書き可能
 
 @mixin mq($breakpoint: m-h) {
-  @media #{map-get($breakpointss, $breakpoint)} {
+  @media #{map-get($breakpoints, $breakpoint)} {
     @content;
   }
 }
