--- a/dev/web/src/sass/foundation/base/_reset.scss
+++ b/dev/web/src/sass/foundation/base/_reset.scss
@@ -1,95 +1,213 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-	margin:0;
-	padding:0;
-	border:0;
-	outline:0;
-  font-size: 100%;
-  font: inherit;
-	vertical-align:baseline;
-	background:transparent;
-  box-sizing: border-box;
-}
+$resetCSS: 1 !default;
 
-body {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  font-family: YakuHanJP,Noto Sans JP,sans-serif;
-  font-weight: 500;
-  line-height: 1;
-  background-color: #e50013;
-  -webkit-font-smoothing: antialiased; //フォント アンチエイリアス調整
-  text-rendering: optimizeLegibility; //レンダリング時のテキスト最適化方法
-}
+@if $resetCSS == 1 or $resetCSS == doctor {
+    /*
+  html5doctor.com Reset Stylesheet
+  v1.6.1
+  Last Updated: 2010-09-17
+  Author: Richard Clark - http://richclarkdesign.com
+  Twitter: @rich_clark
+  */
 
-img {
-  width: 100%;
-}
+  html, body, div, span, object, iframe,
+  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+  abbr, address, cite, code,
+  del, dfn, em, img, ins, kbd, q, samp,
+  small, strong, sub, sup, var,
+  b, i,
+  dl, dt, dd, ol, ul, li,
+  fieldset, form, label, legend,
+  table, caption, tbody, tfoot, thead, tr, th, td,
+  article, aside, canvas, details, figcaption, figure,
+  footer, header, hgroup, menu, nav, section, summary,
+  time, mark, audio, video {
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+  }
 
-h1, h2, h3, h4, h5, h6 {
-	font-weight: 300;
-}
+  body {
+    line-height:1;
+  }
 
-button {
-  outline: none;
-  padding: 0;
-  border: none;
-}
+  article,aside,details,figcaption,figure,
+  footer,header,hgroup,menu,nav,section {
+    display:block;
+  }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section { 
-  display:block;
-}
+  nav ul {
+    list-style:none;
+  }
 
-ul, ol {
-  list-style:none;
-}
+  blockquote, q {
+    quotes:none;
+  }
 
-blockquote, q {
-  quotes:none;
-}
+  blockquote:before, blockquote:after,
+  q:before, q:after {
+    content:'';
+    content:none;
+  }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content:'';
-  content:none;
-}
+  a {
+    margin:0;
+    padding:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+  }
 
-a {
-  margin:0;
-  padding:0;
-	font-size:100%;
-	vertical-align:baseline;
-	background:transparent;
-	text-decoration: none;
-}
+  /* change colours to suit your needs */
+  ins {
+    background-color:#ff9;
+    color:#000;
+    text-decoration:none;
+  }
 
-table {
+  /* change colours to suit your needs */
+  mark {
+    background-color:#ff9;
+    color:#000;
+    font-style:italic;
+    font-weight:bold;
+  }
+
+  del {
+    text-decoration: line-through;
+  }
+
+  abbr[title], dfn[title] {
+    border-bottom:1px dotted;
+    cursor:help;
+  }
+
+  table {
     border-collapse:collapse;
     border-spacing:0;
-}
+  }
 
-/* change border colour to suit your needs */
-hr {
-  display:block;
-  height:1px;
-  border:0;   
-  border-top:1px solid #cccccc;
-  margin:1em 0;
-  padding:0;
-}
+  /* change border colour to suit your needs */
+  hr {
+    display:block;
+    height:1px;
+    border:0;  
+    border-top:1px solid #cccccc;
+    margin:1em 0;
+    padding:0;
+  }
 
-input, select {
-  vertical-align:middle;
+  input, select {
+    vertical-align:middle;
+  }
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+}
+@else if $reset == Eren {
+  /*
+    resetCSS
+    左利きのエレン専用
+  */
+  html, body, div, span, object, iframe,
+  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+  abbr, address, cite, code,
+  del, dfn, em, img, ins, kbd, q, samp,
+  small, strong, sub, sup, var,
+  b, i,
+  dl, dt, dd, ol, ul, li,
+  fieldset, form, label, legend,
+  table, caption, tbody, tfoot, thead, tr, th, td,
+  article, aside, canvas, details, figcaption, figure, 
+  footer, header, hgroup, menu, nav, section, summary,
+  time, mark, audio, video {
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align:baseline;
+    background:transparent;
+    box-sizing: border-box;
+  }
+  
+  body {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    font-family: YakuHanJP,Noto Sans JP,sans-serif;
+    font-weight: 500;
+    line-height: 1;
+    background-color: #e50013;
+    -webkit-font-smoothing: antialiased; //フォント アンチエイリアス調整
+    text-rendering: optimizeLegibility; //レンダリング時のテキスト最適化方法
+  }
+  
+  img {
+    width: 100%;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 300;
+  }
+  
+  button {
+    outline: none;
+    padding: 0;
+    border: none;
+  }
+  
+  article,aside,details,figcaption,figure,
+  footer,header,hgroup,menu,nav,section { 
+    display:block;
+  }
+  
+  ul, ol {
+    list-style:none;
+  }
+  
+  blockquote, q {
+    quotes:none;
+  }
+  
+  blockquote:before, blockquote:after,
+  q:before, q:after {
+    content:'';
+    content:none;
+  }
+  
+  a {
+    margin:0;
+    padding:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+    text-decoration: none;
+  }
+  
+  table {
+      border-collapse:collapse;
+      border-spacing:0;
+  }
+  
+  /* change border colour to suit your needs */
+  hr {
+    display:block;
+    height:1px;
+    border:0;   
+    border-top:1px solid #cccccc;
+    margin:1em 0;
+    padding:0;
+  }
+  
+  input, select {
+    vertical-align:middle;
+  }
 }
