--- a/dev/web/src/sass/hidari-kikino-eren/index.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/index.scss
@@ -16,6 +16,7 @@
 
 /* Project
 -----------------------------------------------------------------*/
+@import "./setting";
 @import "../object/project/hidari-kikino-eren/style";
 
 /* Utility
