--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+/*
+  html5doctor.com Reset Stylesheet
+  v1.6.1
+  Last Updated: 2010-09-17
+  Author: Richard Clark - http://richclarkdesign.com
+  Twitter: @rich_clark
+  */
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
@@ -16,39 +23,17 @@ time, mark, audio, video {
   border: 0;
   outline: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
-  background: transparent;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  background: transparent; }
 
 body {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  font-family: YakuHanJP,Noto Sans JP,sans-serif;
-  font-weight: 500;
-  line-height: 1;
-  background-color: #e50013;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility; }
-
-img {
-  width: 100%; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 300; }
-
-button {
-  outline: none;
-  padding: 0;
-  border: none; }
+  line-height: 1; }
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
 
-ul, ol {
+nav ul {
   list-style: none; }
 
 blockquote, q {
@@ -64,8 +49,27 @@ a {
   padding: 0;
   font-size: 100%;
   vertical-align: baseline;
-  background: transparent;
+  background: transparent; }
+
+/* change colours to suit your needs */
+ins {
+  background-color: #ff9;
+  color: #000;
   text-decoration: none; }
+
+/* change colours to suit your needs */
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold; }
+
+del {
+  text-decoration: line-through; }
+
+abbr[title], dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help; }
 
 table {
   border-collapse: collapse;
@@ -82,6 +86,12 @@ hr {
 
 input, select {
   vertical-align: middle; }
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 /*
   breakpoint 5種類 (ss, s, m, l, xl) を各プロジェクト毎に割り当てる
