--- a/dev/web/src/sass/object/project/top/_style.scss
+++ b/dev/web/src/sass/object/project/top/_style.scss
@@ -2,36 +2,13 @@ body {
 	@include font_family;
 }
 
-.top {
-	
-	.p-kv {
-		position: relative;
-		&:before {
-			display: block;
-			content: '';
-			padding-top: 100vh;
-		}
+header {
 
-		> img {
-			position: absolute;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-			height: 100%;
-			width: 100%;
-			object-fit: cover;
-		}
-
-		> h1 {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			color: #fff;
-			font-size: 80px;
-			font-weight: 700;
-			transform: translate(-50%, -50%);
-			text-shadow: 3px 4px 9px #000;
+	> h1 {
+		color: #333333;
+		font-size: 30px;
+		@include mq(small) {
+			font-size: 9px;
 		}
 	}
 }
