--- a/dev/web/asset/css/top/index.css
+++ b/dev/web/asset/css/top/index.css
@@ -94,11 +94,6 @@ input, select {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-/*
-  breakpoint 5種類 (ss, s, m, l, xl) を各プロジェクト毎に割り当てる
-  接尾辞は各project名 (ex) kadel → -k
-*/
-/* hidari-kikino-eren */
 /* Component 
 -----------------------------------------------------------------*/
 /* Project
@@ -106,63 +101,12 @@ input, select {
 body {
   font-family: 'Lato', 'Noto Sans JP','ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;; }
 
-.top .p-kv {
-  position: relative; }
-  .top .p-kv:before {
-    display: block;
-    content: '';
-    padding-top: 100vh; }
-  .top .p-kv > img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    -o-object-fit: cover;
-    object-fit: cover; }
-  .top .p-kv > h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    color: #fff;
-    font-size: 80px;
-    font-weight: 700;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-shadow: 3px 4px 9px #000; }
+header > h1 {
+  color: #333333;
+  font-size: 30px; }
+  @media screen and (max-width: 599px) {
+    header > h1 {
+      font-size: 9px; } }
 
 /* Utility
 -----------------------------------------------------------------*/
-/*
-  接尾辞は各project名 (ex) kadel → -k
-*/
-/* -------------------
-  hidari-kikino-eren
----------------------- */
-/*  特定のサイズのみ表示
--------------------------*/
-.u-blockS-h {
-  display: none !important; }
-  @media screen and (max-width: 799px) {
-    .u-blockS-h {
-      display: block !important; } }
-
-.u-blockM-h {
-  display: none !important; }
-  @media screen and (min-width: 800px) {
-    .u-blockM-h {
-      display: block !important; } }
-
-.u-blockL-h {
-  display: none !important; }
-  @media screen and (min-width: 800px) and (max-width: 1100px) {
-    .u-blockL-h {
-      display: block !important; } }
-
-.u-blockXL-h {
-  display: none !important; }
-  @media screen and (min-width: 1600px) {
-    .u-blockXL-h {
-      display: block !important; } }
