--- a/dev/web/src/sass/foundation/mixin/_breakpoint.scss
+++ b/dev/web/src/sass/foundation/mixin/_breakpoint.scss
@@ -1,19 +1,46 @@
-/*
-  breakpoint 5種類 (ss, s, m, l, xl) を各プロジェクト毎に割り当てる
-  接尾辞は各project名 (ex) kadel → -k
-*/
-
-/* hidari-kikino-eren */
 $breakpoints: (
+  /* Normal */
+  'small': 'screen and (max-width: 599px)',
+  'middle': 'screen and (min-width: 600px) and (max-width: 1023px)',
+  'large':'screen and (min-width: 1024px)',
+  /* hidari-kikino-eren */
   's-h': 'screen and (max-width: 799px)',
   'm-h': 'screen and (min-width: 800px)',
   'l-h': 'screen and (min-width: 800px) and (max-width: 1100px)',
   'xl-h':'screen and (min-width: 1600px)'
-) !default; //後から上書き可能
+);
 
-@mixin mq($breakpoint: m-h) {
+@mixin mq($breakpoint: middle) {
   @media #{map-get($breakpoints, $breakpoint)} {
     @content;
   }
 }
+
+
+// @mixin mq($breakpoint: middle, $type: $BP) {
+//   $breakpoints: null;
+//   @if $type == 1 or $type == normal {
+//     $breakpoints: (
+//       'small': 'screen and (max-width: 599px)',
+//       'middle': 'screen and (min-width: 600px) and (max-width: 1023px)',
+//       'large':'screen and (min-width: 1024px)'
+//     );
+//     @media #{map-get($breakpoints, $breakpoint)} {
+//       @content;
+//     }
+//   }
+//   @else if $type == Eren {
+//   /* hidari-kikino-eren */
+//     $breakpoints: (
+//       's-h': 'screen and (max-width: 799px)',
+//       'middle': 'screen and (min-width: 800px)',
+//       'l-h': 'screen and (min-width: 800px) and (max-width: 1100px)',
+//       'xl-h':'screen and (min-width: 1600px)'
+//     ); 
+//     @media #{map-get($breakpoints, $breakpoint)} {
+//       @content;
+//     }
+//   }
+// }
+
 
