--- a/dev/web/src/sass/object/project/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/object/project/hidari-kikino-eren/_style.scss
@@ -36,7 +36,7 @@
 			transform: translate(-50%);
 			width: 203.6vw;
 			height: 112.26667vw;
-			@include mq {
+			@include mq(m-h){
 				top: 9.13194vw;
 				width: 98.33333vw;
 				height: 40.69444vw;
@@ -60,7 +60,7 @@
 			width: 28.53333vw;
 			height: 2.66667vw;
 			transition: opacity .2s linear;
-			@include mq {
+			@include mq(m-h){
 				transform: translateY(400%);
 				width: 7.43056vw;
 				height: .69444vw;
@@ -103,7 +103,7 @@
 					transition-delay: 0s;
 					transform: scaleY(.006);
 				}
-				@include mq {
+				@include mq(m-h){
 					order: 1;
 				}
 			}
@@ -119,7 +119,7 @@
 					transition-delay: .2s;
 					transform: scaleY(0);
 				}
-				@include mq {
+				@include mq(m-h){
 					order: 2;
 					transform: scaleX(0);
 					&:before {
@@ -142,7 +142,7 @@
 					transition-delay: .2s;
 					transform: scaleY(0);
 				}
-				@include mq {
+				@include mq(m-h){
 					order: 3;
 					transform: scaleX(0);
 					&:before {
@@ -163,7 +163,7 @@
 					transition-delay: .2s;
 					transform: scaleY(0);
 				}
-				@include mq {
+				@include mq(m-h){
 					order: 4;
 					transform: scaleX(0);
 					&:before {
@@ -191,7 +191,7 @@
 		transition: visibility .4s cubic-bezier(.19,1,.22,1),
 								opacity .4s cubic-bezier(.19,1,.22,1),
 								transform .4s cubic-bezier(.19,1,.22,1);
-		@include mq {
+		@include mq(m-h){
 			height: 4.0625vw;
 		}
 		@include mq(xl-h) {
@@ -206,7 +206,7 @@
 		width: 100%;
 		height: 100%;
 		animation: headerMovingS 6s linear infinite;
-		@include mq {
+		@include mq(m-h){
 			background-size: 16.80556vw 4.0625vw;
 			animation: headerMovingL 6s linear infinite;
 		}
@@ -345,7 +345,7 @@
 		@include mq(s-h) {
 			transform: translateX(100%);
 		}
-		@include mq {
+		@include mq(m-h){
 			height: 4.0625vw;
 			width: auto;
 			opacity: 1;
@@ -365,7 +365,7 @@
 			display: flex;
 			justify-content: center;
 			flex-direction: column;
-			@include mq {
+			@include mq(m-h){
 				position: relative;
 				width: auto;
 				min-height: 0;
@@ -377,7 +377,7 @@
 			position: relative;
 			width: 100%;
 			z-index: 1;
-			@include mq {
+			@include mq(m-h){
 				width: 4.75694vw;
 				background-color: #000;
 				padding: .41667vw;
@@ -410,14 +410,14 @@
 						height: 124.44444px;
 					}
 					.p-menuNavItem__leftArrow {
-						@include mq {
+						@include mq(m-h){
 							display: none;
 						}
 					}
 				}
 				> .p-menuNavItem:first-child {
 					border-width: .26667vw;
-					@include mq {
+					@include mq(m-h){
 						border-width: .06944vw;
 					}
 				}
@@ -449,7 +449,7 @@
 			@include mq(s-h) {
 				margin-top: 4vw;
 			}
-			@include mq {
+			@include mq(m-h){
 				position: absolute;
 				right: 0;
 				top: 0;
@@ -468,7 +468,7 @@
 			> .p-snsButton {
 				width: 33%;
 				border-right-width: 0;
-				@include mq {
+				@include mq(m-h){
 					width: 3.19444vw;
 					height: 3.19444vw;
 				}
@@ -479,7 +479,7 @@
 			}
 			> .p-snsButton:last-child {
 				border-width: .26667vw;
-				@include mq {
+				@include mq(m-h){
 					border-width: .06944vw;
 				}
 			}
@@ -493,7 +493,7 @@
 		position: relative;
 		width: 100%;
 		padding-top: 12vw;
-		@include mq {
+		@include mq(m-h){
 			padding-top: 4.0625vw;
 		}
 		@include mq(xl-h) {
@@ -513,7 +513,7 @@
 		margin: auto;
 		backface-visibility: hidden;
 		transform: translateZ(0);
-		@include mq {
+		@include mq(m-h){
 			height: 49.30556vw;
 			padding-top: 5.06944vw;
 		}
@@ -533,7 +533,7 @@
 			margin: auto;
 			backface-visibility: hidden;
 			transform: translateZ(0);
-			@include mq {
+			@include mq(m-h){
 				width: 98.33333vw;
 				height: 40.69444vw;
 			}
@@ -548,7 +548,7 @@
 			height: 100%;
 			width: 67.86667vw;
 			overflow: hidden;
-			@include mq {
+			@include mq(m-h){
 				width: 25%;
 			}
 			&__inner {
@@ -638,7 +638,7 @@
 			align-items: flex-start;
 			flex-direction: column;
 			transform: translateZ(0);
-			@include mq {
+			@include mq(m-h){
 				left: 4.51389vw;
 			}
 			@include mq(xl-h) {
@@ -653,7 +653,7 @@
 			display: flex;
 			align-items: center;
 			backface-visibility: hidden;
-			@include mq {
+			@include mq(m-h){
 				font-size: 3.125vw;
 			}
 			@include mq(xl-h) {
@@ -674,7 +674,7 @@
 				}
 				& > img {
 					width: 5.73333vw;
-					@include mq {
+					@include mq(m-h){
 						width: 2.53472vw;
 					}
 					@include mq(xl-h) {
@@ -695,7 +695,7 @@
 				& > img {
 					height: 5.6vw;
 					width: auto;
-					@include mq {
+					@include mq(m-h){
 						height: 2.91667vw;
 					}
 					@include mq(xl-h) {
@@ -711,7 +711,7 @@
 			height: 15.333vw;
 			top: 2.6667vw;
 			left: 2.6667vw;
-			@include mq {
+			@include mq(m-h){
 				width: 22.74306vw;
 				height: 5.20833vw;
 				top: auto;
@@ -735,7 +735,7 @@
 		width: 100%;
 		max-width: 1600px;
 		margin: 14.6667vw auto auto;
-		@include mq {
+		@include mq(m-h){
 			display: flex;
 			margin-top: 5.55556vw;
 			padding-top: 2.08333vw;
@@ -765,7 +765,7 @@
 			justify-content: center;
 			align-items: flex-start;
 			overflow: hidden;
-			@include mq {
+			@include mq(m-h){
 				width: 50%;
 				height: 28.19444vw;
 				overflow: visible;
@@ -785,7 +785,7 @@
 			position: relative;
 			z-index: 1;
 			left: 4vw;
-			@include mq {
+			@include mq(m-h){
 				left: -2.43056vw;
 			}
 			@include mq(l-h) {
@@ -808,7 +808,7 @@
 			transform-origin: top left;
 			transform: scaleY(0);
 			backface-visibility: hidden;
-			@include mq {
+			@include mq(m-h){
 				padding: 1.25vw 1.04167vw;
 				top: -1.38889vw;
 				left: 1.38889vw;
@@ -838,7 +838,7 @@
 			img {
 				display: block;
 				width: 3.86667vw;
-				@include mq {
+				@include mq(m-h){
 					width: 1.49306vw;
 				}
 				@include mq(l-h) {
@@ -873,7 +873,7 @@
 			transition: transform .6s cubic-bezier(.19,1,.22,1);
 			transform: scaleX(0);
 			backface-visibility: hidden;
-			@include mq {
+			@include mq(m-h){
 				padding-left: 8em;
 				font-size: .90278vw;
 			}
@@ -914,7 +914,7 @@
 		&__relation {
 			position: relative;
 			width: 100%;
-			@include mq {
+			@include mq(m-h){
 				width: 50%;
 				top: 2.70833vw;
 			}
@@ -937,7 +937,7 @@
 				display: block;
 				width: 100%;
 				padding-top: 100%;
-				@include mq {
+				@include mq(m-h){
 					padding-top: 63.57928%;
 				}
 			}
@@ -991,7 +991,7 @@
 		}
 
 		&__relationInner {
-			@include mq {
+			@include mq(m-h){
 				cursor: pointer;
 			}
 		}
@@ -1006,7 +1006,7 @@
 		width: 100%;
 		margin-top: 13.33333vw;
 		padding-top: 5.33333vw;
-		@include mq {
+		@include mq(m-h){
 			margin-top: 9.375vw;
 			padding-top: 2.08333vw;
 		}
@@ -1021,7 +1021,7 @@
 			background-repeat: repeat;
 			background-position: 50%;
 			background-size: 360px 365px;
-			@include mq {
+			@include mq(m-h){
 				background-size: 720px 730px;
 			}
 		}
@@ -1031,7 +1031,7 @@
 		&__tabs {
 			position: relative;
 			height: 19.45946vw;
-			@include mq {
+			@include mq(m-h){
 				height: 6.66667vw;
 			}
 			@include mq(xl-h) {
@@ -1047,7 +1047,7 @@
 				border-width: .8vw;
 				border-bottom-style: solid;
 				box-sizing: inherit;
-				@include mq {
+				@include mq(m-h){
 					border-width: .20833vw;
 				}
 				@include mq(xl-h) {
@@ -1094,7 +1094,7 @@
 			background-color: #000;
 			padding: 1.2vw 1.2vw 0;
 			z-index: 2;
-			@include mq {
+			@include mq(m-h){
 				width: 44.44444vw;
 				padding: .41667vw .41667vw 0;
 				cursor: pointer;
@@ -1104,7 +1104,7 @@
 				padding: 6.66667px 6.66667px 0;
 			}
 			&:hover {
-				@include mq {
+				@include mq(m-h){
 					.p-tab__inner > span {
 						color: #e50013;
 					}
@@ -1112,7 +1112,7 @@
 			}
 			&:nth-child(1) {
 				left: 4vw;
-				@include mq { //tab切り替えのstyle
+				@include mq(m-h){ //tab切り替えのstyle
 					left: auto;
 					right: calc(50% + 1.04167vw);
 				}
@@ -1122,7 +1122,7 @@
 			}
 			&:nth-child(2) {
 				right: 4vw;
-				@include mq { //tab切り替えのstyle
+				@include mq(m-h){ //tab切り替えのstyle
 					right: auto;
 					left: calc(50% + 1.04167vw);
 				}
@@ -1138,7 +1138,7 @@
 				height: .8vw;
 				background-color: #deff00;
 				bottom: 0;
-				@include mq {
+				@include mq(m-h){
 					height: .20833vw;
 				}
 				@include mq(xl-h) {
@@ -1169,7 +1169,7 @@
 			overflow: hidden;
 			transition: background-color .4s cubic-bezier(.19,1,.22,1),
 									border-color .4s cubic-bezier(.19,1,.22,1);
-			@include mq {
+			@include mq(m-h){
 				border-width: .06944vw;
 				&:before, &:after {
 					position: absolute;
@@ -1212,7 +1212,7 @@
 				line-height: 1;
 				transition: color .4s cubic-bezier(.19,1,.22,1);
 				z-index: 2;
-				@include mq {
+				@include mq(m-h){
 					font-size: 1.80556vw;
 				}
 				@include mq(xl-h) {
@@ -1242,7 +1242,7 @@
 				left: 1.46667vw;
 				width: 3.6vw;
 				height: 2.13333vw;
-				@include mq  {
+				@include mq(m-h) {
 					left: .69444vw;
 					width: 1.38889vw;
 					height: .79861vw;
@@ -1259,7 +1259,7 @@
 			border-color: #deff00;
 			padding: 0;
 			pointer-events: none;
-			@include mq {
+			@include mq(m-h){
 				border-width: .20833vw;
 				cursor: default;
 			}
@@ -1273,7 +1273,7 @@
 
 			.p-tab__inner {
 				border-color: transparent;
-				@include mq {
+				@include mq(m-h){
 					border-width: .06944vw;
 				}
 				@include mq(xl-h) {
@@ -1337,7 +1337,7 @@
 
 			&--prologue:after {
 				content: '※本作品は、2019年10月19日（土）に\A cakesにて掲載されたものになります。';
-				@include mq {
+				@include mq(m-h){
 					content: '※本作品は、2019年10月19日（土）にcakesにて掲載されたものになります。';
 					font-size: 1.62162vw;
 				}
@@ -1345,7 +1345,7 @@
 	
 			&--main:after {
 				content: '※本作品は、2019年10月20日(日）に\A 朝日新聞 全国朝刊にて掲載されたものになります。';
-				@include mq {
+				@include mq(m-h){
 					content: '※本作品は、2019年10月20日(日）に朝日新聞 全国朝刊にて掲載されたものになります。';
 					font-size: 1.62162vw;
 				}
@@ -1370,7 +1370,7 @@
 	.p-story.is-prologue { //tab切り替えのstyle
 		.p-story__tabs:before {
 			width: 4.26667vw;
-			@include mq {
+			@include mq(m-h){
 				width: auto;
 				right: calc(50% + 45.48611vw);
 				left: 0;
@@ -1381,7 +1381,7 @@
 		}
 		.p-story__tabs:after { //tab切り替えのstyle
 			width: 50.66667vw;
-			@include mq {
+			@include mq(m-h){
 				width: auto;
 				left: calc(50% + -1.04167vw);
 				right: 0;
@@ -1395,7 +1395,7 @@
 	.p-story.is-main { //tab切り替えのstyle
 		.p-story__tabs:before {
 			width: 50.66667vw;
-			@include mq {
+			@include mq(m-h){
 				width: auto;
 				right: calc(50% + -1.04167vw);
 				left: 0;
@@ -1406,7 +1406,7 @@
 		}
 		.p-story__tabs:after { //tab切り替えのstyle
 			width: 4vw;
-			@include mq {
+			@include mq(m-h){
 				width: auto;
 				left: calc(50% + 45.48611vw);
 				right: 0;
@@ -1425,7 +1425,7 @@
 		width: 100%;
 		max-width: 1455.55556px;
 		margin: 18.66667vw auto auto;
-		@include mq {
+		@include mq(m-h){
 			width: auto;
 			margin-left: 4.51389vw;
 			margin-right: 4.51389vw;
@@ -1461,7 +1461,7 @@
 				height: 100%;
 				background-repeat: repeat-x;
 				background-size: 327.45725vw 57.86667vw;
-				@include mq {
+				@include mq(m-h){
 					background-size: 133.61111vw 23.61111vw;
 				}
 				@include mq(xl-h) {
@@ -1474,7 +1474,7 @@
 				&:before {
 					background-image: url('../../../data/hidari-kikino-eren/images/result_bg1.jpg');
 					animation: moveBgRight 30s linear infinite;
-					@include mq {
+					@include mq(m-h){
 						animation: moveBgRightL 30s linear infinite;
 					}
 					@include mq(xl-h) {
@@ -1488,7 +1488,7 @@
 				&:before {
 					background-image: url('../../../data/hidari-kikino-eren/images/result_bg2.jpg');
 					animation: moveBgLeft 30s linear infinite;
-					@include mq {
+					@include mq(m-h){
 						animation: moveBgLeftL 30s linear infinite;
 					}
 					@include mq(xl-h) {
@@ -1556,7 +1556,7 @@
 			position: relative;
 			z-index: 3;
 			padding: 18.26667vw 4vw 25.33333vw;
-			@include mq {
+			@include mq(m-h){
 				padding: 9.96528vw 13.47222vw 10.17361vw;
 			}
 			@include mq(xl-h) {
@@ -1574,7 +1574,7 @@
 				justify-content: center;
 				align-items: flex-start;
 			}
-			@include mq {
+			@include mq(m-h){
 				margin-bottom: 1.66667vw;
 			}
 			@include mq(xl-h) {
@@ -1588,7 +1588,7 @@
 				transform-origin: top left;
 				transform: scaleX(0);
 				backface-visibility: hidden;
-				@include mq {
+				@include mq(m-h){
 					height: 5.45139vw;
 				}
 				@include mq(xl-h) {
@@ -1638,7 +1638,7 @@
 			align-items: flex-start;
 			margin-bottom: 9vw;
 			z-index: 2;
-			@include mq {
+			@include mq(m-h){
 				margin-bottom: 20.48611vw;
 			}
 			@include mq(xl-h) {
@@ -1660,7 +1660,7 @@
 				transform-origin: top left;
 				transition: transform .6s cubic-bezier(.19,1,.22,1);
 				backface-visibility: hidden;
-				@include mq {
+				@include mq(m-h){
 					font-size: 1.86458vw;
 					line-height: 1.3;
 					padding: .1em .2em;
@@ -1714,7 +1714,7 @@
 			top: 58vw;
 			right: 6.53333vw;
 			z-index: 4;
-			@include mq {
+			@include mq(m-h){
 				width: 14.58333vw;
 				height: 16.5625vw;
 				top: 26.66667vw;
@@ -1738,7 +1738,7 @@
 			bottom: 34.66667vw;
 			right: 7.46667vw;
 			transform: rotate(-3.5deg);
-			@include mq {
+			@include mq(m-h){
 				width: 22.04861vw;
 				height: 15.03472vw;
 				top: 27.77778vw;
@@ -1759,7 +1759,7 @@
 			height: 29.6vw;
 			bottom: 6.93333vw;
 			right: 5.73333vw;
-			@include mq {
+			@include mq(m-h){
 				width: 28.47222vw;
 				height: 20.3125vw;
 				top: 28.19444vw;
@@ -1793,7 +1793,7 @@
 				transition: transform .6s cubic-bezier(.19,1,.22,1);
 				transition-delay: 1.7s;
 				backface-visibility: hidden;
-				@include mq {
+				@include mq(m-h){
 					height: 5.10417vw;
 					transition-delay: 1.3s;
 				}
@@ -1804,7 +1804,7 @@
 					@include textFadeIN;
 					transition-delay: 1.9s;
 					background-color: #e50013;
-					@include mq {
+					@include mq(m-h){
 						transition-delay: 1.5s;
 					}
 				}
@@ -1819,7 +1819,7 @@
 				transition: transform .6s cubic-bezier(.19,1,.22,1);
 				transition-delay: 1.8s;
 				backface-visibility: hidden;
-				@include mq {
+				@include mq(m-h){
 					height: 9.58333vw;
 					transition-delay: 1.4s;
 				}
@@ -1830,7 +1830,7 @@
 					@include textFadeIN;
 					transition-delay: 1.9s;
 					background-color: #e50013;
-					@include mq {
+					@include mq(m-h){
 						transition-delay: 1.6s;
 					}
 				}
@@ -2253,7 +2253,7 @@
 		transition: opacity 0.4s cubic-bezier(.19,1,.22,1), 
 								transform 0.4s cubic-bezier(.19,1,.22,1),
 								z-index 0s cubic-bezier(.19,1,.22,1);
-		@include mq {
+		@include mq(m-h){
 			width: 761px;
 			height: 454px;
 		}
