--- a/dev/web/asset/css/top/index.css
+++ b/dev/web/asset/css/top/index.css
@@ -99,7 +99,8 @@ input, select {
 /* Project
 -----------------------------------------------------------------*/
 body {
-  font-family: 'Lato', 'Noto Sans JP','ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;; }
+  font-family: 'Lato', 'Noto Sans JP','ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;;
+  color: #333333; }
 
 .p-header {
   height: 100vh;
@@ -123,24 +124,60 @@ body {
     justify-content: center; }
     .p-header__wrap > h1 {
       color: #333333;
-      font-size: 60px;
+      font-size: 80px;
       font-style: italic; }
       @media screen and (max-width: 599px) {
         .p-header__wrap > h1 {
           font-size: 9px; } }
   .p-header__nav {
     margin-top: 50px; }
-    .p-header__nav ul {
-      width: 50%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: distribute;
-      justify-content: space-around;
-      margin: 0 auto; }
-      .p-header__nav ul > li {
-        font-size: 16px;
-        font-weight: 200; }
+  .p-header__list {
+    width: 530px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    margin: 0 auto; }
+    .p-header__list > li {
+      font-size: 16px;
+      font-weight: 200; }
+  .p-header__icon > svg {
+    display: block;
+    width: 70px;
+    height: 70px; }
+  .p-header__icon > span {
+    display: inline-block;
+    margin-top: 10px; }
+
+.p-topMain {
+  width: 1100px;
+  margin: 0 auto; }
+  .p-topMain .p-profile {
+    padding: 50px 100px; }
+    .p-topMain .p-profile > h2 {
+      font-size: 40px;
+      font-weight: 200; }
+    .p-topMain .p-profile__content {
+      margin-top: 45px;
+      padding-left: 10px; }
+      .p-topMain .p-profile__content > dl {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+      .p-topMain .p-profile__content dd, .p-topMain .p-profile__content dt {
+        display: inline-block; }
+      .p-topMain .p-profile__content dt {
+        font-size: 14px;
+        line-height: 1.7;
+        width: 20%; }
+      .p-topMain .p-profile__content dd {
+        font-size: 14px;
+        line-height: 1.7;
+        width: 80%;
+        padding-bottom: 15px; }
 
 /* Utility
 -----------------------------------------------------------------*/
