--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -51,6 +51,10 @@ a {
   vertical-align: baseline;
   background: transparent; }
 
+/* 独自で追加 */
+img {
+  width: 100%; }
+
 /* change colours to suit your needs */
 ins {
   background-color: #ff9;
