--- a/dev/web/asset/css/top/index.css
+++ b/dev/web/asset/css/top/index.css
@@ -52,6 +52,10 @@ a {
   vertical-align: baseline;
   background: transparent; }
 
+/* 独自で追加 */
+img {
+  width: 100%; }
+
 /* change colours to suit your needs */
 ins {
   background-color: #ff9;
@@ -152,7 +156,8 @@ body {
 
 .p-topMain {
   width: 1100px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  background-color: #F0F0F0; }
   .p-topMain .p-profile {
     padding: 50px 100px; }
     .p-topMain .p-profile > h2 {
@@ -160,7 +165,7 @@ body {
       font-weight: 200; }
     .p-topMain .p-profile__content {
       margin-top: 45px;
-      padding-left: 10px; }
+      padding: 0 10px; }
       .p-topMain .p-profile__content > dl {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -178,6 +183,21 @@ body {
         line-height: 1.7;
         width: 80%;
         padding-bottom: 15px; }
+  .p-topMain .p-works {
+    padding: 50px 100px; }
+    .p-topMain .p-works > h2 {
+      font-size: 40px;
+      font-weight: 200; }
+    .p-topMain .p-works__list {
+      margin-top: 45px;
+      padding: 0 10px;
+      list-style: none; }
+      .p-topMain .p-works__list > li {
+        width: 70%;
+        margin: 0 auto; }
+      .p-topMain .p-works__list > li a {
+        display: block;
+        width: 100%; }
 
 /* Utility
 -----------------------------------------------------------------*/
