--- a/dev/web/src/sass/object/project/top/_style.scss
+++ b/dev/web/src/sass/object/project/top/_style.scss
@@ -64,6 +64,7 @@ body {
 .p-topMain {
 	width: 1100px;
 	margin: 0 auto;
+	background-color: #F0F0F0;
 
 	.p-profile {
 		padding: 50px 100px;
@@ -75,7 +76,7 @@ body {
 
 		&__content {
 			margin-top: 45px;
-			padding-left: 10px;
+			padding: 0 10px;
 
 			> dl {
 				display: flex;
@@ -100,5 +101,30 @@ body {
 			}
 		}
 
+	}
+
+	.p-works {
+		padding: 50px 100px;
+
+		> h2 {
+			font-size: 40px;
+			font-weight: 200;
+		}
+
+		&__list {
+			margin-top: 45px;
+			padding: 0 10px;
+			list-style: none;
+			
+			> li {
+				width: 70%;
+				margin: 0 auto;
+			}
+
+			> li a {
+				display: block;
+				width: 100%;
+			}
+		}
 	}
 }
