--- a/dev/web/asset/css/top/index.css
+++ b/dev/web/asset/css/top/index.css
@@ -106,63 +106,30 @@ body {
   font-family: 'Lato', 'Noto Sans JP','ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;;
   color: #333333; }
 
-.p-header {
-  height: 100vh;
-  position: relative; }
-  .p-header__wrap {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
-    .p-header__wrap > h1 {
-      color: #333333;
-      font-size: 80px;
-      font-style: italic; }
-      @media screen and (max-width: 599px) {
-        .p-header__wrap > h1 {
-          font-size: 9px; } }
-  .p-header__nav {
-    margin-top: 50px; }
-  .p-header__list {
-    width: 530px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    margin: 0 auto; }
-    .p-header__list > li {
-      font-size: 16px;
-      font-weight: 200; }
-  .p-header__icon > svg {
-    display: block;
-    width: 70px;
-    height: 70px; }
-  .p-header__icon > span {
-    display: inline-block;
-    margin-top: 10px; }
+.p-sectionTitle {
+  font-size: 30px;
+  font-weight: 200;
+  letter-spacing: 1.4px; }
 
 .p-topMain {
   width: 1100px;
   margin: 0 auto;
-  background-color: #F0F0F0; }
+  padding: 150px 0 100px; }
+  .p-topMain header > h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 200;
+    letter-spacing: 0.2em; }
+  .p-topMain .p-anchorList {
+    text-align: center;
+    margin-top: 40px; }
+    .p-topMain .p-anchorList > li {
+      display: inline-block;
+      margin: 0 1em;
+      font-size: 15px; }
   .p-topMain .p-profile {
-    padding: 50px 100px; }
-    .p-topMain .p-profile > h2 {
-      font-size: 40px;
-      font-weight: 200; }
+    padding: 50px 100px;
+    margin-top: 100px; }
     .p-topMain .p-profile__content {
       margin-top: 45px;
       padding: 0 10px; }
@@ -185,19 +152,34 @@ body {
         padding-bottom: 15px; }
   .p-topMain .p-works {
     padding: 50px 100px; }
-    .p-topMain .p-works > h2 {
-      font-size: 40px;
-      font-weight: 200; }
     .p-topMain .p-works__list {
       margin-top: 45px;
       padding: 0 10px;
-      list-style: none; }
+      list-style: none;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
       .p-topMain .p-works__list > li {
-        width: 70%;
+        width: calc(50% - 25px);
         margin: 0 auto; }
+        .p-topMain .p-works__list > li:first-child {
+          margin-right: 50px; }
       .p-topMain .p-works__list > li a {
         display: block;
         width: 100%; }
+      .p-topMain .p-works__list img {
+        border: 1px solid #e0e0e0; }
+    .p-topMain .p-works__text {
+      margin-top: 10px;
+      font-size: 14px;
+      line-height: 1.7;
+      font-weight: 200; }
+  .p-topMain .p-skills {
+    padding: 50px 100px; }
+    .p-topMain .p-skills > p {
+      margin-top: 45px;
+      font-size: 14px;
+      line-height: 1.7; }
 
 /* Utility
 -----------------------------------------------------------------*/
